Fixed a List.of() that is a Java 9 feature